--- a/app/styles/atoms/layout/_margin.scss
+++ b/app/styles/atoms/layout/_margin.scss
@@ -1,13 +1,13 @@
 ////
-// Variables and Mixins for generating margins
+// Variables and Mixins for generating margin declarations
 // @group Atoms/Layout
 ////
 
 // ============================================================================
 // Variables
 // ============================================================================
-
-$margin-scale: (
+$DEFAULT_OPTS: (
+  'default': initial,
   'auto': auto,
   0: 0,
   1: rem(2),
@@ -19,7 +19,13 @@ $margin-scale: (
   7: rem(56),
   8: rem(64),
   9: rem(128)
-) !default;
+);
+
+// Allow consumers to define their own options
+$margin-opts: () !default;
+
+// merge in the default options
+$margin-opts: map-merge($DEFAULT_OPTS, $margin-opts);
 
 // ============================================================================
 // Mixins
@@ -27,7 +33,7 @@ $margin-scale: (
 
 ////
 // Mixin: ma - sets margin for all directions
-// @param {List or Number} $keys - one or more keys in $margin-scale
+// @param {List or Number} $keys - one or more keys in $margin-opts
 // @examples `@include ma((1,2,2,1))`, `@include ma(1)`
 // @returns a margin declaration
 ////
@@ -42,74 +48,74 @@ $margin-scale: (
     margin: $values;
   } @else {
     // if $keys is a anything else...
-    margin: get($margin-scale, $keys, 'pa mixin');
+    margin: get($margin-opts, $keys, 'ma mixin');
   }
 }
 
 ////
 // Mixin: mv - sets margins for vertical directions
-// @param {Number} $top - a key in $margin-scale (defaults to 0)
-// @param {Number} $bottom - a key in $margin-scale (defaults to value of $top)
+// @param {Number} $top - a key in $margin-opts (defaults to 0)
+// @param {Number} $bottom - a key in $margin-opts (defaults to value of $top)
 // @examples `@include mv(1,2)`, `@include mv(1)`
 // @returns margin-top and margin-bottom declarations
 ////
 @mixin mv($top: 0, $bottom: null) {
-  margin-top: get($margin-scale, $top, 'pv mixin');
+  margin-top: get($margin-opts, $top, 'mv mixin');
   margin-bottom: if(
     $bottom,
-    get($margin-scale, $bottom, 'pv mixin'),
-    get($margin-scale, $top, 'pv mixin')
+    get($margin-opts, $bottom, 'mv mixin'),
+    get($margin-opts, $top, 'mv mixin')
   );
 }
 
 ////
 // Mixin: mh - sets margins for horizontal directions
-// @param {Number} $left - a key in $margin-scale (defaults to 0)
-// @param {Number} $right - a key in $margin-scale (defaults to value of $left)
+// @param {Number} $left - a key in $margin-opts (defaults to 0)
+// @param {Number} $right - a key in $margin-opts (defaults to value of $left)
 // @examples `@include mh(1,2)`, `@include mh(1)`
 // @returns margin-left and margin-right declarations
 ////
 @mixin mh($left: 0, $right: null) {
   margin-right: if(
     $right,
-    get($margin-scale, $right, 'pv mixin'),
-    get($margin-scale, $left, 'pv mixin')
+    get($margin-opts, $right, 'mv mixin'),
+    get($margin-opts, $left, 'mv mixin')
   );
-  margin-left: get($margin-scale, $left, 'pv mixin');
+  margin-left: get($margin-opts, $left, 'mv mixin');
 }
 
 ////
 // Mixin: mt - sets top margin
-// @param {Number} $key - a key in $margin-scale (defaults to 0)
+// @param {Number} $key - a key in $margin-opts (defaults to 0)
 // @returns a margin-top declaration
 ////
 @mixin mt($key: 0) {
-  margin-top: get($margin-scale, $key, 'mt mixin');
+  margin-top: get($margin-opts, $key, 'mt mixin');
 }
 
 ////
 // Mixin: mr - sets right margin
-// @param {Number} $key - a key in $margin-scale (defaults to 0)
+// @param {Number} $key - a key in $margin-opts (defaults to 0)
 // @returns a margin-right declaration
 ////
 @mixin mr($key: 0) {
-  margin-right: get($margin-scale, $key, 'mr mixin');
+  margin-right: get($margin-opts, $key, 'mr mixin');
 }
 
 ////
 // Mixin: mb - sets bottom margin
-// @param {Number} $key - a key in $margin-scale (defaults to 0)
+// @param {Number} $key - a key in $margin-opts (defaults to 0)
 // @returns a margin-bottom declaration
 ////
 @mixin mb($key: 0) {
-  margin-bottom: get($margin-scale, $key, 'mb mixin');
+  margin-bottom: get($margin-opts, $key, 'mb mixin');
 }
 
 ////
 // Mixin: ml - sets left margin
-// @param {Number} $key - a key in $margin-scale (defaults to 0)
+// @param {Number} $key - a key in $margin-opts (defaults to 0)
 // @returns a margin-left declaration
 ////
 @mixin ml($key: 0) {
-  margin-left: get($margin-scale, $key, 'ml mixin');
+  margin-left: get($margin-opts, $key, 'ml mixin');
 }
