--- a/app/styles/atoms/layout/_padding.scss
+++ b/app/styles/atoms/layout/_padding.scss
@@ -1,13 +1,13 @@
 ////
-// Variables and Mixins for generating padding
+// Variables and Mixins for generating padding declarations
 // @group Atoms/Layout
 ////
 
 // ============================================================================
 // Variables
 // ============================================================================
-
-$padding-scale: (
+$DEFAULT_OPTS: (
+  'default': initial,
   'auto': auto,
   0: 0,
   1: rem(2),
@@ -19,7 +19,13 @@ $padding-scale: (
   7: rem(56),
   8: rem(64),
   9: rem(128)
-) !default;
+);
+
+// Allow consumers to define their own options
+$padding-opts: () !default;
+
+// merge in the default options
+$padding-opts: map-merge($DEFAULT_OPTS, $padding-opts);
 
 // ============================================================================
 // Mixins
@@ -27,7 +33,7 @@ $padding-scale: (
 
 ////
 // Mixin: pa - sets paddings for all directions
-// @param {List or Number} $keys - one or more keys in $padding-scale
+// @param {List or Number} $keys - one or more keys in $padding-opts
 // @examples `@include pa((1,2,2,1))`, `@include pa(1)`
 // @returns a padding declaration
 ////
@@ -42,74 +48,74 @@ $padding-scale: (
     padding: $values;
   } @else {
     // if $keys is anything else...
-    padding: get($padding-scale, $keys, 'pa mixin');
+    padding: get($padding-opts, $keys, 'pa mixin');
   }
 }
 
 ////
 // Mixin: pv - sets paddings for vertical directions
-// @param {Number} $top - a key in $padding-scale (defaults to 0)
-// @param {Number} $bottom - a key in $padding-scale (defaults to value of $top)
+// @param {Number} $top - a key in $padding-opts (defaults to 0)
+// @param {Number} $bottom - a key in $padding-opts (defaults to value of $top)
 // @examples `@include pv(1,2)`, `@include pv(1)`
 // @returns padding-top and padding-bottom declarations
 ////
 @mixin pv($top: 0, $bottom: null) {
-  padding-top: get($padding-scale, $top, 'pv mixin');
+  padding-top: get($padding-opts, $top, 'pv mixin');
   padding-bottom: if(
     $bottom,
-    get($padding-scale, $bottom, 'pv mixin'),
-    get($padding-scale, $top, 'pv mixin')
+    get($padding-opts, $bottom, 'pv mixin'),
+    get($padding-opts, $top, 'pv mixin')
   );
 }
 
 ////
 // Mixin: ph - sets paddings for horizontal directions
-// @param {Number} $left - a key in $padding-scale (defaults to 0)
-// @param {Number} $right - a key in $padding-scale (defaults to value of $left)
+// @param {Number} $left - a key in $padding-opts (defaults to 0)
+// @param {Number} $right - a key in $padding-opts (defaults to value of $left)
 // @examples `@include ph(1,2)`, `@include ph(1)`
 // @returns padding-left and padding-right declarations
 ////
 @mixin ph($left: 0, $right: null) {
   padding-right: if(
     $right,
-    get($padding-scale, $right, 'pv mixin'),
-    get($padding-scale, $left, 'pv mixin')
+    get($padding-opts, $right, 'pv mixin'),
+    get($padding-opts, $left, 'pv mixin')
   );
-  padding-left: get($padding-scale, $left, 'pv mixin');
+  padding-left: get($padding-opts, $left, 'pv mixin');
 }
 
 ////
 // Mixin: pt - sets top padding
-// @param {Number} $key - a key in $padding-scale (defaults to 0)
+// @param {Number} $key - a key in $padding-opts (defaults to 0)
 // @returns a padding-top declaration
 ////
 @mixin pt($key: 0) {
-  padding-top: get($padding-scale, $key, 'pt mixin');
+  padding-top: get($padding-opts, $key, 'pt mixin');
 }
 
 ////
 // Mixin: pr - sets right padding
-// @param {Number} $key - a key in $padding-scale (defaults to 0)
+// @param {Number} $key - a key in $padding-opts (defaults to 0)
 // @returns a padding-right declaration
 ////
 @mixin pr($key: 0) {
-  padding-right: get($padding-scale, $key, 'pr mixin');
+  padding-right: get($padding-opts, $key, 'pr mixin');
 }
 
 ////
 // Mixin: pb - sets bottom padding
-// @param {Number} $key - a key in $padding-scale (defaults to 0)
+// @param {Number} $key - a key in $padding-opts (defaults to 0)
 // @returns a padding-bottom declaration
 ////
 @mixin pb($key: 0) {
-  padding-bottom: get($padding-scale, $key, 'pb mixin');
+  padding-bottom: get($padding-opts, $key, 'pb mixin');
 }
 
 ////
 // Mixin: pl - sets left padding
-// @param {Number} $key - a key in $padding-scale (defaults to 0)
+// @param {Number} $key - a key in $padding-opts (defaults to 0)
 // @returns a padding-left declaration
 ////
 @mixin pl($key: 0) {
-  padding-left: get($padding-scale, $key, 'pl mixin');
+  padding-left: get($padding-opts, $key, 'pl mixin');
 }
