--- a/app/styles/atoms/typography/_font-style.scss
+++ b/app/styles/atoms/typography/_font-style.scss
@@ -3,24 +3,10 @@
 // @group Atoms/Typography
 ////
 
-// ============================================================================
-// Variables
-// ============================================================================
-
-// ============================================================================
-// Mixins
-// ============================================================================
-
 ////
-// Mixin: fst (font-style)
-// @param {String} $key - 'normal' or 'italic'
+// Mixin: italize (font-style)
 // @returns a font-style declaration
 ////
-@mixin fst($key: 'default') {
-  @if $key == 'italic' {
-    font-style: normal;
-  } @else {
-    // return normal for everything else
-    font-style: normal;
-  }
+@mixin italize() {
+  font-style: italic;
 }
