--- a/app/styles/atoms/layout/_aspect-ratio.scss
+++ b/app/styles/atoms/layout/_aspect-ratio.scss
@@ -1,7 +1,9 @@
 ////
-// Variables and Mixin for generating aspect ratio styles
+// Variables and Mixin for generating aspect ratio declarations
 // @group Atoms/Layout
 // @credit https://github.com/tachyons-css/tachyons
+//
+// ============================================================================
 // @example
 // ```
 //   <div class="foo">
@@ -16,13 +18,14 @@
 //     @include ar-child;
 //   }
 // ```
+// ============================================================================
 ////
 
 // ============================================================================
 // Variables
 // ============================================================================
-
-$DEFAULT_RATIOS: (
+$DEFAULT_OPTS: (
+  'default': 100%,
   '16x9': 56.25%,
   '9x16': 177.77%,
   '4x3': 75%,
@@ -33,10 +36,14 @@ $DEFAULT_RATIOS: (
   '5x8': 160%,
   '7x5': 71.42%,
   '5x7': 140%,
-  '1x1': 100%
+  'square': 100%
 );
 
-$aspect-ratio-opts: map-merge(('default': 100%), $DEFAULT_RATIOS) !default;
+// Allow consumers to define their own options
+$aspect-ratios: () !default;
+
+// merge in the default options
+$aspect-ratios: map-merge($DEFAULT_OPTS, $aspect-ratios);
 
 // ============================================================================
 // Mixins
@@ -50,7 +57,7 @@ $aspect-ratio-opts: map-merge(('default': 100%), $DEFAULT_RATIOS) !default;
 @mixin ar-parent($key) {
   position: relative;
   height: 0;
-  padding-bottom: get($aspect-ratio-opts, $key, 'ar-wrapper mixin');
+  padding-bottom: get($aspect-ratios, $key, 'ar-wrapper mixin');
 }
 
 ////
