--- a/app/styles/atoms/layout/_height.scss
+++ b/app/styles/atoms/layout/_height.scss
@@ -1,15 +1,14 @@
 ////
-// Variables and Mixins for generating heights
+// Variables and Mixins for generating height declarations
 // @group Atoms/Layout
 ////
 
 // ============================================================================
 // Variables
 // ============================================================================
-
-$height-opts: (
-  'default': 'inherit',
-  'auto': 'auto',
+$DEFAULT_OPTS: (
+  'default': inherit,
+  'auto': auto,
   0: 0,
   1: rem(8),
   2: rem(16),
@@ -19,15 +18,21 @@ $height-opts: (
   6: rem(64),
   7: rem(128),
   8: rem(256),
-  '25%': '25%',
-  '50%': '50%',
-  '75%': '75%',
-  '100%': '100%',
+  '25%': 25%,
+  '50%': 50%,
+  '75%': 75%,
+  '100%': 100%,
   'vh25': 25vh,
   'vh50': 50vh,
   'vh75': 75vh,
   'vh100': 100vh
-) !default;
+);
+
+// Allow consumers to define their own options
+$height-opts: () !default;
+
+// merge in the default options
+$height-opts: map-merge($DEFAULT_OPTS, $height-opts);
 
 // ============================================================================
 // Mixins
