--- a/app/styles/atoms/layout/_width.scss
+++ b/app/styles/atoms/layout/_width.scss
@@ -1,15 +1,14 @@
 ////
-// Variables and Mixins for generating heights
+// Variables and Mixins for generating width declarations
 // @group Atoms/Layout
 ////
 
 // ============================================================================
 // Variables
 // ============================================================================
-
-$width-opts: (
-  'default': 'inherit',
-  'auto': 'auto',
+$DEFAULT_OPTS: (
+  'default': inherit,
+  'auto': auto,
   0: 0,
   1: rem(8),
   2: rem(16),
@@ -19,23 +18,29 @@ $width-opts: (
   6: rem(64),
   7: rem(128),
   8: rem(256),
-  '10%': '10%',
-  '20%': '20%',
-  '25%': '25%',
-  '30%': '30%',
-  '33%': '33%',
-  '34%': '34%',
-  '40%': '40%',
-  '50%': '50%',
-  '60%': '60%',
-  '70%': '70%',
-  '75%': '75%',
-  '80%': '80%',
-  '90%': '90%',
-  '100%': '100%',
+  '10%': 10%,
+  '20%': 20%,
+  '25%': 25%,
+  '30%': 30%,
+  '33%': 33%,
+  '34%': 34%,
+  '40%': 40%,
+  '50%': 50%,
+  '60%': 60%,
+  '70%': 70%,
+  '75%': 75%,
+  '80%': 80%,
+  '90%': 90%,
+  '100%': 100%,
   'one-third': calc(100% / 3),
   'two-thirds': calc(100% / 1.5)
-) !default;
+);
+
+// Allow consumers to define their own options
+$width-opts: () !default;
+
+// merge in the default options
+$width-opts: map-merge($DEFAULT_OPTS, $aspect-ratios);
 
 // ============================================================================
 // Mixins
