--- a/app/styles/atoms/theming/_background.scss
+++ b/app/styles/atoms/theming/_background.scss
@@ -1,13 +1,13 @@
 ////
-// Variables and Mixins for
+// Variables and Mixins for generating background declarations
 // @group Atoms/Theming
 ////
 
 // ============================================================================
 // Variables
 // ============================================================================
-
-$background-position-opts: (
+$DEFAULT_BACKGROUND_POSITION_OPTS: (
+  'default': (top left),
   'top-left': (top left),
   'top-center': (top center),
   'top-right': (top right),
@@ -17,12 +17,26 @@ $background-position-opts: (
   'bottom-left': (bottom left),
   'bottom-center': (bottom center),
   'bottom-right': (bottom right)
-) !default;
+);
+$DEFAULT_BACKGROUND_SIZE_OPTS: (
+  'default': cover,
+  'contain': contain,
+  'cover': cover
+);
+$DEFAULT_BACKGROUNDS: (
+  'default': color('white', 'darken-1'),
+  'theme-primary': color('primary', 'lighten-5')
+);
 
-$background-size-opts: (
-  'contain': 'contain',
-  'cover': 'cover'
-) !default;
+// Allow consumers to define their own options
+$background-position-opts: () !default;
+$background-size-opts: () !default;
+$backgrounds: () !default;
+
+// merge in the default options
+$background-position-opts: map-merge($DEFAULT_BACKGROUND_POSITION_OPTS, $background-position-opts);
+$background-size-opts: map-merge($DEFAULT_BACKGROUND_SIZE_OPTS, $background-size-opts);
+$backgrounds: map-merge($DEFAULT_BACKGROUNDS, $backgrounds);
 
 // ============================================================================
 // Mixins
@@ -30,12 +44,16 @@ $background-size-opts: (
 
 ////
 // Mixin: bg
-// @param {String | Map} $palette - a palette in $color-palettes or a map
+// @param {String | Map} $palette - a key in $backgrounds, a palette in $color-palettes or a map
 // @param {String} $shade - name of the palette shade (uses default if none is given)
 // @returns a background-color declaration
 ////
 @mixin bg($palette, $shade) {
-  background-color: color($palette, $shade);
+  @if type-of($palette) == 'string' and map-has-key($backgrounds, $palette) {
+    background-color: get($backgrounds);
+  } @else {
+    background-color: color($palette, $shade);
+  }
 }
 
 ////
