--- a/app/styles/atoms/typography/_text-align.scss
+++ b/app/styles/atoms/typography/_text-align.scss
@@ -6,14 +6,19 @@
 // ============================================================================
 // Variables
 // ============================================================================
+$DEFAULT_OPTS: (
+  'default': left,
+  'left': left,
+  'right': right,
+  'center': center,
+  'justify': justify
+);
 
-$text-align-opts: (
-  'default': 'left',
-  'left': 'left',
-  'right': 'right',
-  'center': 'center',
-  'justify': 'justify'
-) !default;
+// Allow consumers to define their own options
+$text-align-opts: () !default;
+
+// merge in the default options
+$text-align-opts: map-merge($DEFAULT_OPTS, $text-align-opts);
 
 // ============================================================================
 // Mixins
