--- a/app/styles/atoms/typography/_text-decoration.scss
+++ b/app/styles/atoms/typography/_text-decoration.scss
@@ -6,12 +6,17 @@
 // ============================================================================
 // Variables
 // ============================================================================
+$DEFAULT_OPTS: (
+  'default': none,
+  'underline': underline,
+  'strike': line-through
+);
 
-$text-decoration-opts: (
-  'default': 'none',
-  'underline': 'underline',
-  'strike': 'line-through'
-) !default;
+// Allow consumers to define their own options
+$text-decoration-opts: () !default;
+
+// merge in the default options
+$text-decoration-opts: map-merge($DEFAULT_OPTS, $text-decoration-opts);
 
 // ============================================================================
 // Mixins
