--- a/app/styles/ember-sass-atoms.scss
+++ b/app/styles/ember-sass-atoms.scss
@@ -4,6 +4,7 @@
 
 // Multi-use utility functions & mixins
 @import 'atoms/utils';
+@import 'atoms/theming/color-palette';
 
 // Layout Atoms
 @import 'atoms/layout/aspect-ratio';
@@ -16,10 +17,9 @@
 @import 'atoms/layout/padding';
 @import 'atoms/layout/position';
 @import 'atoms/layout/width';
-@import 'atoms/layout/layout';
+@import 'atoms/layout/utils';
 
 // Typography Atoms
-@import 'atoms/typography/font-family';
 @import 'atoms/typography/font-size';
 @import 'atoms/typography/font-style';
 @import 'atoms/typography/font-weight';
@@ -28,17 +28,13 @@
 @import 'atoms/typography/text-align';
 @import 'atoms/typography/text-decoration';
 @import 'atoms/typography/text-transform';
+@import 'atoms/typography/typeset';
 @import 'atoms/typography/vertical-align';
 @import 'atoms/typography/white-space';
-@import 'atoms/typography/typography';
 
 // Theming Atoms
 @import 'atoms/theming/background';
 @import 'atoms/theming/border';
-@import 'atoms/theming/color-palette';
+@import 'atoms/theming/font-color';
+@import 'atoms/theming/font-family';
 @import 'atoms/theming/transition';
-
-
-// Material Design Atoms
-@import 'atoms/material-design/color-palette';
-@import 'atoms/material-design/typography';
